test_regress/t/t_interface_top_bad.out
%Error-UNSUPPORTED: t/t_interface_top_bad.v:17:19: Unsupported: Interfaced port on top level module
   17 |    ifc.counter_mp c_data
      |                   ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_interface_top_bad.v:17:4: Parent instance's interface is not found: 'ifc'
   17 |    ifc.counter_mp c_data
      |    ^~~
%Error: Exiting due to
